# DTI-VOODOO

./: .gitignore  README.md  TODO.md  example_commands  requirements.txt
src/meme-5.1.0/: ARCHIVE_DATE  ARCHIVE_REVISION  INSTALL  Makefile  Makefile.am  Makefile.in  MemeSuite.properties  MemeSuite.properties.in  README  build.xml  build.xml.in  config.h  config.h.in  config.status  configure  configure.ac  libtool  website.mk
src/meme-5.1.0/doc/: Makefile  Makefile.am  Makefile.in  alphabet-format.html  ama.html  ame-output-format.html  ame-tutorial.html  ame.html  authors.html  beadstring.html  centrimo-output-format.html  centrimo-tutorial.html  centrimo.html  ceqlogo.html  cite.html  download.html  dreme.html  fasta-format.html  fasta-grep.html  fasta-shuffle-letters.html  fimo-output-format.html  fimo.html  general-faq.html  glam2.html  glam2scan.html  gomo-output-format.html  gomo.html  install.html  install.html.in  mast.html  mcast-output-format.html  mcast.html  meme-chip-output-format.html  meme-chip.html  meme-format.html  meme.html  meme2meme.html  momo-output-format.html  momo.html  motif-consensus.html  (+13 more)
src/meme-5.1.0/doc/css/: Makefile  Makefile.in  style.css
src/meme-5.1.0/doc/examples/: Makefile  Makefile.am  Makefile.in  create_examples  create_examples.pl.in  example-datasets.mk  examples.mk
src/meme-5.1.0/doc/images/: Makefile  Makefile.am  Makefile.in
src/meme-5.1.0/doc/js/: Makefile  Makefile.am  Makefile.in  centrimo_graph.js  menu-configure.js  menu-data.js  menu-data.js.in  menu.js  menu.js.in  motif_logo.js  shared-doc.js  tgene_doc.js  utilities.js
src/meme-5.1.0/etc/: MOMO_config.xml.in  Makefile  Makefile.am  Makefile.in  TGENE_config.xml.in  ame_template.html  ame_template.html.in  beadstring.xsl  centrimo_template.html  centrimo_template.html.in  centrimo_template.js  constants.js  constants.js.xsl  constants.xsl  dreme_template.css  dreme_template.html  dreme_template.html.in  dreme_template.js  gomo-to-html.xsl  gomo-to-html.xsl.in  icons.xsl  job_status.tmpl  mast_template.html  mast_template.html.in  mast_template.js  mcast_template.html  mcast_template.html.in  mcast_template.js  meme-chip_template.html  meme-chip_template.html.in  meme-chip_template.js  meme.css  meme.css.xsl  meme_template.html  meme_template.html.in  meme_template.js  momo_template.html  momo_template.html.in  motif_logo_template.js  simple-shared-doc.js  (+10 more)
src/meme-5.1.0/scripts/: Globals.pm  Globals.pm.in  Makefile  Makefile.am  Makefile.in  MemeSAX.pm  MemeWebUtils.pm  MemeWebUtils.pm.in  MotifUtils.pm  StatusPage.pm  StatusPage.pm.in  ama-qvalues  ame_webservice.pl.in  beeml2meme  chen2meme  dependencies.pl  dreme  dreme-py3  dreme.py.in  dreme_py3.py.in  dreme_xml_to_html  dreme_xml_to_txt  elm2meme  fasta-center  fasta-dinucleotide-shuffle  fasta-dinucleotide-shuffle-py3.in  fasta-dinucleotide-shuffle-py3.py  fasta-fetch  fasta-grep  fasta-hamming-enrich-py3  fasta-hamming-enrich-py3.in  fasta-hamming-enrich.py  fasta-make-index  fasta-most  fasta-most.pl.in  fasta-re-match  fasta-subsample  fasta-unique-names  glam2html.py.in  glam2scan2html  (+34 more)
src/meme-5.1.0/src/: Makefile  Makefile.am  Makefile.in  alph-in.c  alphabet.c  alphabet.h  alphtype  ama  ame  ame.c  banner.c  beadstring.c  bed.c  binomial.c  centrimo  centrimo.c  ceqlogo  clustalw2fasta  clustalw2phylip  compute-prior-dist  compute-uniform-priors  create-priors  dir.h  display.c  dtc  fasta-get-markov  fasta-get-markov.c  fasta-shuffle-letters  fasta-shuffle-letters.c  fimo  fisher_exact  fitevd  fitevd.c  fitevd.h  gendb  getsize  glam2  glam2format  glam2html  glam2mask  (+174 more)
src/meme-5.1.0/src/.deps/: alphtype-alphtype.Po  ama-ama.Po  ame-ame.Po  ame-fisher_exact.Po  ame-ramen_scan.Po  centrimo-centrimo.Po  centrimo-fisher_exact.Po  ceqlogo-ceqlogo.Po  clustalw2fasta-clustalw2fasta.Po  clustalw2phylip-clustalw2phylip.Po  compute_prior_dist-compute-prior-dist.Po  compute_uniform_priors-compute-uniform-priors.Po  create_priors-create-priors.Po  dtc-dtc.Po  dtc-logs.Po  fasta_get_markov-fasta-get-markov.Po  fasta_shuffle_letters-fasta-shuffle-letters.Po  fasta_shuffle_letters-ushuffle.Po  fimo-fimo-output.Po  fimo-fimo.Po  fisher_exact-fisher_exact.Po  fitevd-fitevd.Po  gendb-gendb.Po  getsize.Po  glam2-glam2_alphabet.Po  glam2-glam2_args.Po  glam2-glam2_column_sample.Po  glam2-glam2_dirichlet.Po  glam2-glam2_dna_prior.Po  glam2-glam2_fasta.Po  glam2-glam2_glam2.Po  glam2-glam2_glam2_aln.Po  glam2-glam2_init.Po  glam2-glam2_output.Po  glam2-glam2_recode3_20comp.Po  glam2-glam2_site_sample.Po  glam2-glam2_util.Po  glam2format-glam2_alignment.Po  glam2format-glam2_fasta.Po  glam2format-glam2_glam2format.Po  (+199 more)
src/meme-5.1.0/src/filters/: Makefile  Makefile.in
src/meme-5.1.0/src/libexslt/: Makefile  Makefile.in
src/meme-5.1.0/src/libxml2/: Makefile  Makefile.in
src/meme-5.1.0/src/libxslt/: Makefile  Makefile.in
src/meme-5.1.0/src/parallel/: Makefile  Makefile.in  meme
src/meme-5.1.0/tests/: Makefile  Makefile.am  Makefile.in
src/meme-5.1.0/tests/ame/: Makefile  Makefile.in  ame.3dmhg.totalhits.fix-partition.html  ame.3dmhg.totalhits.fix-partition.tsv  ame.3dmhg.totalhits.no_control.html  ame.3dmhg.totalhits.no_control.tsv  ame.4dmhg.totalhits.fix-partition.html  ame.4dmhg.totalhits.fix-partition.tsv  ame.4dmhg.totalhits.no_control.html  ame.4dmhg.totalhits.no_control.tsv  ame.dna_with_covalent.html  ame.dna_with_covalent.sequences.tsv  ame.dna_with_covalent.tsv  ame.fisher.avg.control.html  ame.fisher.avg.control.sequences.tsv  ame.fisher.avg.control.tsv  ame.fisher.avg.fix-partition.html  ame.fisher.avg.fix-partition.sequences.tsv  ame.fisher.avg.fix-partition.tsv  ame.fisher.avg.no_control.html  ame.fisher.avg.no_control.sequences.tsv  ame.fisher.avg.no_control.tsv  ame.fisher.max.control.html  ame.fisher.max.control.sequences.tsv  ame.fisher.max.control.tsv  ame.fisher.max.fix-partition.html  ame.fisher.max.fix-partition.sequences.tsv  ame.fisher.max.fix-partition.tsv  ame.fisher.max.no_control.html  ame.fisher.sum.control.tsv  (+67 more)
src/meme-5.1.0/website/: Makefile  Makefile.in  index.html  web.xml
(+949 files in other folders)
